# cpp-basecamp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
doc/: CMakeLists.txt  Doxyfile.in
ext/: README
include/sample-project/: sample.h  simple-fifo-queue.h
src/: sample.cpp  simple-fifo-queue.cpp
test/: sample-test.cpp  simple-fifo-queue-test.cpp
